--- a/dentist/website/templates/contact.html
+++ b/dentist/website/templates/contact.html
@@ -158,7 +158,12 @@
     </div>
   </div>
   <!-- ***** Breadcrumb Area End ***** -->
-
+  {% if message_name %}
+  <center>
+    <h2>Thanks {{ message_name }}</h2>
+    <p>We receive you email</p>
+  </center>
+  {% endif %}
   <!-- ***** Contact Area Start ***** -->
   <section class="dento-contact-area mt-50 mb-100">
     <div class="container">
